<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/calculatorFragment"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/calculator" />
        <item
            android:id="@+id/browserFragment"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/browser" />
        <item
            android:id="@+id/musicPlayerFragment"
            android:icon="@android:drawable/stat_sys_headset"
            android:title="@string/music_player" />
    </group>
</menu>