<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.firebase.FirebaseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:text="@string/emailpassword_title_text"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signed_out"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAE9E9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow android:id="@+id/emailPasswordFields">

                <EditText
                    android:id="@+id/fieldEmail"
                    android:layout_weight="1"
                    android:hint="Email" />

                <EditText
                    android:id="@+id/fieldPassword"
                    android:layout_weight="1"
                    android:hint="Password" />
            </TableRow>

            <TableRow
                android:id="@+id/emailPasswordButtons"
                android:layout_width="wrap_content">

                <Button
                    android:id="@+id/emailSignInButton"
                    android:layout_width="138dp"
                    android:layout_weight="1"
                    android:text="@string/sign_in" />

                <Button
                    android:id="@+id/emailCreateAccountButton"
                    android:layout_width="149dp"
                    android:layout_weight="1"
                    android:text="@string/create_account" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/signedInButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="#EAE9E9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/signOutButton"
                android:layout_weight="1"
                android:text="@string/sign_out" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/verifyEmailButton"
                android:layout_weight="1"
                android:text="@string/verify_email" />

        </LinearLayout>

        <Button
            android:id="@+id/enterButton"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="130dp"
            android:text="Войти"
            app:layout_constraintBottom_toTopOf="@+id/table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>