<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.kryazhin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.kryazhin.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.kryazhin.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/calculatorFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.calculator.CalculatorFragment"
        android:label="fragment_calculator"
        tools:layout="@layout/fragment_calculator" />
    <fragment
        android:id="@+id/browserFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.browser.BrowserFragment"
        android:label="fragment_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/musicPlayerFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.musicplayer.MusicPlayerFragment"
        android:label="fragment_music_player"
        tools:layout="@layout/fragment_music_player" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.permissions.Camera"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/audioRecordFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.permissions.AudioRecordFragment"
        android:label="fragment_audio_record"
        tools:layout="@layout/fragment_audio_record" />
    <fragment
        android:id="@+id/sensorsFragment"
        android:name="ru.mirea.kryazhin.mireaproject.ui.permissions.Sensors"
        android:label="fragment_sensors"
        tools:layout="@layout/fragment_sensors" />
</navigation>